<resources>

    <string name="app_name">Counter</string>
    <string name="menu_settings">Settings</string>
    <string name="pick_time">Select how far ahead you want to set the reminder:</string>
    <string name="pick_title">Select a title</string>
    <string name="hint_title">Reminder title</string>
    <string name="alarm_title">Alarm Title</string>
    
    <string name="b_set">Set</string>
    <string name="b_cancel">Cancel</string>
    <string name="b_stop">Stop Alarm</string>
    
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>

</resources>